# agengit

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.agents/: agents.md
src/: OS.cpp  OS.h  main.cpp  permission.h  rules.cpp  rules.h
